syntax = "proto3";

option go_package = "github.com/racibaz/go-arch/internal/modules/post/presentation/grpc/proto";

service PostService{
	rpc CreatePost(Post) returns (CreatePostResponse){}
}

message Post {
	  string Title = 1;
	  string Description = 2;
	  string Content = 3;
}

message CreatePostRequest {
	  Post Post = 1; // The post to be created
}

message CreatePostResponse {
	string Id = 1;
}
